# IG-lio-color

./: CMakeLists.txt  README.md  package.xml
config/: avia.yaml  mid360.yaml
include/ig_lio/: point_type.h  pointcloud_preprocess.h
launch/: lio_avia.launch  lio_bg_avia.launch  lio_mid360.launch
rviz/: lio_show.rviz
src/: ig_lio_node.cpp  pointcloud_preprocess.cpp
